--- a/craft/templates/commerce/_includes/meter.html
+++ b/craft/templates/commerce/_includes/meter.html
@@ -1,24 +1,24 @@
 {% set steps = [
   {
-  label: "Start Order",
-  url: 'commerce/checkout'
-},
-{
-  label: "Address",
-  url: 'commerce/checkout/addresses'
-},
-{
-  label: "Shipping",
-  url: 'commerce/checkout/shipping'
-},
-{
-  label: "Payment",
-  url: 'commerce/checkout/payment'
-}
+    label: "Start Order",
+    url: 'commerce/checkout'
+  },
+  {
+    label: "Address",
+    url: 'commerce/checkout/addresses'
+  },
+  {
+    label: "Shipping",
+    url: 'commerce/checkout/shipping'
+  },
+  {
+    label: "Payment",
+    url: 'commerce/checkout/payment'
+  }
 ] %}
 
 {% if width is not defined %}
-{% set width = 0 %}
+  {% set width = 0 %}
 {% endif %}
 
 <div class="row">
@@ -28,19 +28,18 @@
       <ul>
         {% for key, step in steps %}
 
-        {% set class = '' %}
-        {% if craft.request.requestUri|slice(1) == step.url %}
-        {% set width = ((key + 1) * 100 / steps|length) - 20 %}
-        {% set class = "sel" %}
-        {% set currentStep = key %}
-        {% endif %}
+          {% set class = '' %}
+          {% if craft.request.lastSegment() == step.url | split('/') | last %}
+            {% set width = ((key + 1) * 100 / steps|length) - 20 %}
+            {% set class = "sel" %}
+            {% set currentStep = key %}
+          {% endif %}
 
-        {% if currentStep is not defined %}
-        {% set class = "done" %}
-        {% endif %}
+          {% if currentStep is not defined %}
+            {% set class = "done" %}
+          {% endif %}
 
-
-        <li class="{{ class }}"><a href="{{ url( step.url ) }}">{{ step.label }}</a></li>
+          <li class="{{ class }}"><a href="{{ url( step.url ) }}">{{ step.label }}</a></li>
 
         {% endfor %}
       </ul>
