--- a/public/css/sass/store.sass
+++ b/public/css/sass/store.sass
@@ -115,53 +115,41 @@
 
 h1, h2, h3, h4, h5, h6
   margin-top: 0
-  margin-bottom: 2rem
+  margin-bottom: 25px
   font-weight: 300
 
 h1
-  font-size: 4.0rem
-  line-height: 1.2
-  letter-spacing: -.1rem
+  font-size: 28px
 
 h2
-  font-size: 3.6rem
-  line-height: 1.25
-  letter-spacing: -.1rem
+  font-size: 24px
 
 h3
-  font-size: 3.0rem
-  line-height: 1.3
-  letter-spacing: -.1rem
+  font-size: 22px
 
 h4
-  font-size: 2.4rem
-  line-height: 1.35
-  letter-spacing: -.08rem
+  font-size: 18px
 
 h5
-  font-size: 1.8rem
-  line-height: 1.5
-  letter-spacing: -.05rem
+  font-size: 14px
 
 h6
-  font-size: 1.5rem
-  line-height: 1.6
-  letter-spacing: 0
+  font-size: 12px
 
 /* Larger than phablet */
 @media (min-width: 550px)
-  h1
-    font-size: 5.0rem
-  h2
-    font-size: 4.2rem
-  h3
-    font-size: 3.6rem
-  h4
-    font-size: 3.0rem
-  h5
-    font-size: 2.4rem
-  h6
-    font-size: 1.5rem
+  // h1
+  //   font-size: 5.0rem
+  // h2
+  //   font-size: 4.2rem
+  // h3
+  //   font-size: 3.6rem
+  // h4
+  //   font-size: 3.0rem
+  // h5
+  //   font-size: 2.4rem
+  // h6
+  //   font-size: 1.5rem
 
 p
   margin-top: 0
@@ -181,6 +169,8 @@ a
 
 .button, button
   display: inline-block
+  vertical-align: top
+
   height: 38px
   padding: 0 30px
   color: #555
@@ -201,6 +191,8 @@ a
 input
   &[type="submit"], &[type="reset"], &[type="button"]
     display: inline-block
+    vertical-align: top
+
     height: 38px
     padding: 0 30px
     color: #555
@@ -208,7 +200,6 @@ input
     font-size: 13px
     font-weight: 600
     line-height: 38px
-    letter-spacing: .1rem
     text-transform: uppercase
     text-decoration: none
     white-space: nowrap
@@ -345,6 +336,8 @@ label, legend
   display: block
   margin-bottom: .5rem
   font-weight: 600
+  &:only-of-type
+    margin-bottom: 0
 
 fieldset
   padding: 0
@@ -513,15 +506,15 @@ hr
       a
         color: #aaa
       &.done
-        color: $orange
+        color: $copper
         opacity: .5
         a
-          color: $orange
+          color: $copper
       &.sel
-        color: $orange
+        color: $copper
         opacity: 1
         a
-          color: $orange
+          color: $copper
   .meter
     height: 10px
     position: relative
@@ -538,7 +531,7 @@ hr
       border-bottom-right-radius: 2px
       border-top-left-radius: 10px
       border-bottom-left-radius: 10px
-      background-color: $orange
+      background-color: $copper
       position: relative
       overflow: hidden
 
