Correct the file path
Add gallery page specifics

Add hacksaw

Final styles for gallery page, plus new ability to handle videos in galleries.

Allow for autoplaying of videos

Make the gallery logic use the partials correctly, so we don't repeat ourselves.

--- a/craft/templates/partials/banners.html
+++ b/craft/templates/partials/banners.html
@@ -97,6 +97,20 @@
     </div>
 
   {% endif %}
+  {#
+  # Gallery Page
+  #}
+  {% if craft.request.getSegment(1) == 'gallery' %}
+
+    <div class="banner" id="gallery-page-banner">
+
+      <div class="banner-headline-container">
+        <div class="banner-headline">{{ "Gallery" | translate }}</div>
+      </div>
+
+    </div>
+
+  {% endif %}
 
 {% endcache %}
 </div>
