--- a/craft/templates/commerce/customer/index.html
+++ b/craft/templates/commerce/customer/index.html
@@ -7,6 +7,9 @@
 
         <h1>My Orders</h1>
 
+        {% set orders = craft.commerce.orders.customer(craft.commerce.customer).find() %}
+
+        {% if orders %}
         <table class="u-full-width">
           <thead>
             <tr>
@@ -17,7 +20,7 @@
             </tr>
           </thead>
           <tbody>
-            {% for order in craft.commerce.orders.customer(craft.commerce.customer).find() %}
+            {% for order in orders %}
             <tr>
               <td><a href="{{ url('commerce/customer/order', { number: order.number }) }}">Order #{{ order.id }}</a></td>
               <td>{{ order.dateOrdered }}</td>
@@ -27,6 +30,9 @@
             {% endfor %}
           </tbody>
         </table>
+        {% else %}
+          <p>No orders found</p>
+        {% endif %}
 
       {% endif %}
     </div>
