stubs price regions in tpl and adds Shipping Zone db dump
adds geo plugin, stubs country detection for variant

Uses shippingDestinations for EU detection, adds geo to /products

--- a/craft/templates/_layouts/_layout.html
+++ b/craft/templates/_layouts/_layout.html
@@ -34,6 +34,19 @@
       {% include 'partials/nav' %}
       {% include 'partials/banners' %}
 
+      <!-- set region and currency based on IP and the Shipping Destinations in EU  -->
+      {% set regionCode = 'us'  %}
+      {% set currencyCode = 'USD' %}
+
+      {% set euroList = [] %}
+      {% for country in shippingConfirmation.shippingDestinationsInEu %}
+        {% set euroList = euroList|merge([country.value]) %}
+      {% endfor %}
+      {% if craft.geo.info.country_code in euroList %}
+        {% set regionCode = 'eu'  %}
+        {% set currencyCode = 'EUR'  %}
+      {% endif  %}
+
   </header>
 
   <!-- Inherited Main Content -->
