--- a/craft/templates/partials/product_preview.html
+++ b/craft/templates/partials/product_preview.html
@@ -10,15 +10,18 @@
       <input type="hidden" name="action" value="commerce/cart/updateCart">
       <input type="hidden" name="redirect" value="commerce/cart">
       <input type="hidden" name="qty" value="1" min="1" max="10">
-      <input type="hidden" value="{{ item.defaultVariantId }}" name="purchasableId" />
       {{ getCsrfInput() }}
-
-      <span class="price">{{ item.defaultVariant.price|currency(cart.currency) }}</span>
-      {% if item.defaultVariant.stock <= 0 and item.defaultVariant.unlimitedStock == false %}
-        <input class="buy" type="submit" disabled="disabled" value="{{ "Out of Stock" | t }}" />
-      {% else %}
-        <input class="buy" type="submit" value="{{ "Add to cart" | t }}" />
-      {% endif %}
+      {% for variant in item.variants %}
+        {% if regionCode in variant.sku  %}
+          <input type="hidden" value="{{ variant.purchasableId }}" name="purchasableId" />
+          <span class="price">{{ variant.price|commerceCurrency(currencyCode,convert=true,format=true) }}</span>
+          {% if item.defaultVariant.stock <= 0 and item.defaultVariant.unlimitedStock == false %}
+            <input class="buy" type="submit" disabled="disabled" value="{{ "Out of Stock" | t }}" />
+          {% else %}
+            <input class="buy" type="submit" value="{{ "Add to cart" | t }}" />
+          {% endif %}
+        {% endif %}
+      {% endfor  %}
     </form>
   </div>
 </li>
