--- a/craft/templates/partials/nav.html
+++ b/craft/templates/partials/nav.html
@@ -1,3 +1,41 @@
+{% set section = craft.request.getSegment(1) %}
+{% set subsection = craft.request.getSegment(2) %}
+{% set display_menu = section != 'commerce' or subsection == 'cart' %}
+
+<div class="top-menu">
+  <div class="user-menu">
+    {% if currentUser %}
+      <p>
+        {{ 'Welcome' | t }}, {{ currentUser.username }}
+      </p>
+      <a href="{{ logoutUrl }}"><span class="fa fa-sign-in"></span> {{ "Logout" | t }}</a>
+    {% else %}
+      <a href="{{ loginUrl }}"><span class="fa fa-sign-out"></span> {{ "Login" | t }}</a>
+    {% endif %}
+  </div>
+
+  {% if display_menu %}
+  <div class="options-menu">
+    <ul class="localization">
+      <li {% if craft.locale == 'en_us' %}class="active"{% endif %}><a href="{{ url('/en') }}" >EN</a></li>
+      <li {% if craft.locale == 'it' %}class="active"{% endif %}><a href="{{ url('/it') }}" >ITA</a></li>
+    </ul>
+    <div class="cart">
+      <a class="{% if craft.request.getSegment(1) == 'cart' %}button-primary{% endif %}" href="{{ url('commerce/cart') }}">
+        <i class="fa fa-shopping-cart"></i> {{ "Cart"|t }} <span>{{ cart.totalQty }}</span>
+      </a>
+    </div>
+  </div>
+  {% elseif not display_menu and currentUser %}
+    <div class="options-menu order-menu">
+      {% if currentUser %}
+        <a href="{{ url('commerce/customer') }}">{{ "My Orders"|t }}</a>
+        <a href="{{ url('commerce/customer/addresses') }}">{{ "My Addresses"|t }}</a>
+      {% endif %}
+    </div>
+  {% endif %}
+</div>
+
 <nav>
   <div class="header-container">
 
@@ -8,22 +46,6 @@
       </a>
     </div>
 
-    <div class="user-menu">
-      {% if currentUser %}
-        <p>
-          Welcome, {{ currentUser.username }}
-        </p>
-        <a href="{{ logoutUrl }}"><span class="fa fa-sign-in"></span> Logout?</a>
-      {% else %}
-        <a href="{{ loginUrl }}"><span class="fa fa-sign-out"></span> Login</a>
-      {% endif %}
-    </div>
-
-
-    {% set section = craft.request.getSegment(1) %}
-    {% set subsection = craft.request.getSegment(2) %}
-    {% set display_menu = section != 'commerce' or subsection == 'cart' %}
-
     {% if display_menu %}
     <ul class="navigation">
       <li><a href="{{ url('about') }}" {% if craft.request.getSegment(1) == 'about' %}class="active"{% endif %}>{{"About" | translate}}</a></li>
@@ -33,25 +55,6 @@
       <li><a href="{{ url('gallery') }}" {% if craft.request.getSegment(1) == 'gallery' %}class="active"{% endif %}>{{"Gallery" | translate}}</a></li>
       <li><a href="{{ url('contact') }}" {% if craft.request.getSegment(1) == 'contact' %}class="active"{% endif %}>{{"Contact" | translate}}</a></li>
     </ul>
-    <div class="top-menu">
-      <ul class="localization">
-        <li {% if craft.locale == 'en_us' %}class="active"{% endif %}><a href="{{ url('/en') }}" >EN</a></li>
-        <li {% if craft.locale == 'it' %}class="active"{% endif %}><a href="{{ url('/it') }}" >ITA</a></li>
-      </ul>
-      <div class="cart">
-        <a class="{% if craft.request.getSegment(1) == 'cart' %}button-primary{% endif %}" href="{{ url('commerce/cart') }}">
-          <i class="fa fa-shopping-cart"></i> {{ "Cart"|t }} <span>{{ cart.totalQty }}</span>
-        </a>
-      </div>
-    </div>
-    {% elseif not display_menu and currentUser %}
-      <div class="top-menu order-menu">
-        {% if currentUser %}
-          <a href="{{ url('commerce/customer') }}">{{ "My Orders"|t }}</a>
-          <a href="{{ url('commerce/customer/addresses') }}">{{ "My Addresses"|t }}</a>
-        {% endif %}
-      </div>
     {% endif %}
-
   </div>
 </nav>
