--- a/public/css/sass/store.sass
+++ b/public/css/sass/store.sass
@@ -556,8 +556,21 @@ img.product
   width: 100%
 
 .flash
-  color: $orange
-  margin-bottom: 10px
+  background-color: $orange
+  height: 35px
+  line-height: 37px
+  color: #fff
+  padding: 0 10px
+  margin: 20px 0 15px
+  font-family: $sans
+  font-size: 19px
+  text-transform: uppercase
+  span
+    margin-right: 10px
+  #commerce #content .container &
+    position: relative
+    bottom: 30px
+    margin-top: 0
 
 .has-error
   input
