--- a/craft/templates/_layouts/_commerce.html
+++ b/craft/templates/_layouts/_commerce.html
@@ -31,8 +31,7 @@
   <div id="header" class="container">
     <div class="row">
       <div class="twelve columns">
-        <div class="flash">{{ craft.session.getFlash('notice') }}</div>
-        <div class="flash">{{ craft.session.getFlash('error') }}</div>
+        {% include 'partials/flashes.html' %}
       </div>
     </div>
   </div>
