--- a/craft/templates/commerce/cart.html
+++ b/craft/templates/commerce/cart.html
@@ -2,8 +2,7 @@
 
 {% block content %}
 
-  <div class="flash">{{ craft.session.getFlash('notice') }}</div>
-  <div class="flash">{{ craft.session.getFlash('error') }}</div>
+  {% include 'partials/flashes.html' %}
 
   <div class="row">
     <div class="twelve columns">
