--- a/craft/templates/partials/nav.html
+++ b/craft/templates/partials/nav.html
@@ -16,9 +16,14 @@
 
   {% if display_menu %}
   <div class="options-menu">
+    {% set pageUri = craft.request.url|replace(siteUrl, '') %}
     <ul class="localization">
-      <li {% if craft.locale == 'en_us' %}class="active"{% endif %}><a href="{{ url('/en') }}" >EN</a></li>
-      <li {% if craft.locale == 'it' %}class="active"{% endif %}><a href="{{ url('/it') }}" >ITA</a></li>
+      <li {% if craft.locale == 'en_us' %}class="active"{% endif %}>
+        <a href="{{ craft.config.siteUrl['en_us'] ~ pageUri }}" >EN</a>
+      </li>
+      <li {% if craft.locale == 'it' %}class="active"{% endif %}>
+        <a href="{{ craft.config.siteUrl['it'] ~ pageUri }}" >ITA</a>
+      </li>
     </ul>
     <div class="cart">
       <a class="{% if craft.request.getSegment(1) == 'cart' %}button-primary{% endif %}" href="{{ url('commerce/cart') }}">
